creating chain schema for wallet

--- a/.env
+++ b/.env
@@ -1,1 +1,52 @@
 MONGO_DATABASE_URL="mongodb+srv://somyaranjankhatua122:D5PNdhcd2vFxn1D2@wallet.uwdty0a.mongodb.net/?retryWrites=true&w=majority&appName=wallet"
+
+
+USER_WALLET_DATA = {
+    email: "somyaranjan@gmail.com",
+    password: 1234,
+    username: "@somyaranjan",
+    private_key_a: "a487a73b4a71c62aab5e9",
+    private_key_b: "a487a73b4a71c62aab5e9",
+    private_key_c: "a487a73b4a71c62aab5e9",
+    accounts: [
+        {
+            acount_name: "ACCOUNT_1",
+            chain_id: {
+                chain_data_ref_id: "67f54b0d7c82343e2d49e426",
+                public_key: "
+                    04dbcb96d30b96c126666820873156893dfbfefcd2de41281ff6e
+                    613ec01ffc4f462f380b76b99f8f4e58b7a2cca97aa0a164dcb40
+                    39660cab953247ea94e78eb7
+                ",
+                address: "0xba0e4e286b06ff0bd3a8ec44108543a4a4e24374",
+                balance: 1000,
+                fungible_tokens: [{}],
+                non_fungible_tokens: [{}]
+            },
+        },
+    ]
+}
+
+CHAINS_DATA = [
+    {
+        object_id: "67f54b0d7c82343e2d49e426",
+        chain_id: "1115111",
+        endpoints: [
+            "https://eth.llamarpc.com",
+            "https://eth.llamarpc.com",
+            "https://eth.llamarpc.com"
+        ],
+        chain_data: {
+            symbol: "ETH",
+            network: "Ethereum",
+            market_cap: "$1000",
+            total_supply: "120M",
+            circulating_supply: "122M",
+            perfomance_data: {
+                volume: "$6575",
+                trades: "2344k",
+                traders: "8759k"
+            }
+        },
+    }
+]
